2010-07-10 Homer Xing <homer.xing@gmail.com>

    * Install repository signing key from local directory.
      Therefore we can enable repository even if the key server is offline.
    * Make the install_software_pane more pretty, by splitting middle toolbar 
      into pane1 and pane2.
    * Display total number of available software items at the bottom of 
      install_software_pane.
    * Stat source code loading time. Display stat data by "others->stat data".
      Therefore developers can do more optimization.

2010-07-9 Homer Xing <homer.xing@gmail.com>

    * Remove excessive icons.
    * Delete unused variables in "with" statements.
    * List excessive icons in ``appicons'' directory.
      Print the software items which require an icon.
      Therefore developers can remove excessive icons.
    * Move software icons into "appicons" directory.
    * Remove mplayer-vod & comicview, since they are only useful for SJTU people.
    * Refresh icons immediately after downloading icons.
    * Improve server list generation code. Do not add repeated server. Add two comments.

2010-06-29 Ray Chen <chenrano2002@gmail.com>

    * Fix Issue 729: load panel failed when there is no selinx on Fedora

2010-06-29 Homer Xing <homer.xing@gmail.com>

    * Display lock path if failed to lock.
    * Create lock directory if necessary.
    * Fix bug: No option 'login_window_background'
    * Do not install Realplayer. It cannot be removed by yum.
    * Fedora server response time may exceed 10 seconds. 

2010-06-27 Homer Xing <homer.xing@gmail.com>

    * Try to lock apt cache before install software

2010-06-23 Homer Xing <homer.xing@gmail.com>

    * Display size of swap partitions
    * Example proxy string is selectable
    * Hide bios & motherboard item if value is empty
    * Return to original software list immediately after successfully install software

2010-06-19 Homer Xing <homer.xing@gmail.com>

    * Improve clean up pane. Reduce space cost.