@@ -276,7 +276,13 @@ def __others():
         thread.start_new_thread(check_update, ())
     help_update.connect('activate', callback)
 
-    help_report_bug = image_file_menuitem(_('Propose suggestion and report bugs'), D+'umut_icons/m_propose_suggestion.png', 16) 
+    help_propose_suggestion = image_file_menuitem(_('Propose suggestion'), D+'umut_icons/m_propose_suggestion.png', 16)
+    def propose_suggestion(*w):
+        from support.clientlib import SuggestionsSubmit
+        SuggestionsSubmit()
+    help_propose_suggestion.connect('activate', propose_suggestion)
+
+    help_report_bug = image_file_menuitem(_('Report bugs'), D+'umut_icons/m_propose_suggestion.png', 16)
     help_report_bug.connect('activate', 
         lambda w: report_bug() )
     
@@ -297,7 +303,7 @@ def __others():
     statistics.connect('activate', lambda *w: show_statistics())
     
     return [ changelog, help_contribute, help_blog, help_update, 
-             help_report_bug, help_translate, special_thank, about, statistics, ] 
+             help_propose_suggestion, help_report_bug, help_translate, special_thank, about, statistics, ]
    
 def get_study_linux_menu():
     return __study_linux()
